--- a/.github/auto-comment.yml
+++ b/.github/auto-comment.yml
@@ -1,20 +1,6 @@
 pullRequestOpened: >
   Thank you for opening this pull request, your code will be reviewed soon! 
-    
-    
-  Important Notes:
   
+  Reminder, please follow the contribution guidelines outlined in the README. This Pull Request should be for an Issue that you have been assigned. 
   
-  We are limiting contributions per person to 3 additions across EmojiScreen, EmojiBops and EmojiPages. Please limit yourself to up to 3 additions across the three emoji projects. (Example One: Complete 1 feature, add two movies; Example Two: add three songs; Example Three: add one song, one movie and one book, etc). This is due to the high level of activity on these projects at the moment. We want to make sure many people have a chance to contribute. The limit will be lifted once the activity has died down. 🙂
-  
-  
-  
-  If any updates need to be made, I will leave a comment for you here outlining exactly what you need to change for your pull request to be accepted. 💜
-  
-  
-  
-  In the meantime, feel free to contribute to one of my other projects: 
-  
-  📺 EmojiScreen - A listing of TV shows, movies and musicals. (https://github.com/brittanyrw/emojiscreen)
-  
-  📚 EmojiPages - A listing of books and plays. (https://github.com/brittanyrw/emojipages)
+  If any updates need to be made, we will leave a comment for you here outlining exactly what you need to change for your pull request to be accepted. 💖
